--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "support": {
     "issues": "https://github.com/imorland/follow-users/issues",
     "source": "https://github.com/imorland/follow-users",
-    "forum": "https://discuss.flarum.org"
+    "forum": "https://discuss.flarum.org/d/25701"
   },
   "require": {
     "flarum/core": "^0.1.0-beta.15",
@@ -38,7 +38,7 @@
       }
     },
     "flagrow": {
-      "discuss": ""
+      "discuss": "https://discuss.flarum.org/d/25701"
     }
   }
 }
