--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "forum": "https://discuss.flarum.org/d/25701"
   },
   "require": {
-    "flarum/core": "^0.1.0-beta.15",
-    "fof/follow-tags": "^0.6.4"
+    "flarum/core": "^0.1.0-beta.16",
+    "fof/follow-tags": "^0.7.1"
   },
   "authors": [
     {
@@ -35,6 +35,9 @@
         "name": "fas fa-user-friends",
         "backgroundColor": "#0072e3",
         "color": "#fff"
+      },
+      "optional-dependencies": {
+        "fof/follow-tags": "*"
       }
     },
     "flagrow": {
