--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "forum": "https://discuss.flarum.org/d/25701"
   },
   "require": {
-    "flarum/core": "^0.1.0-beta.16",
-    "fof/follow-tags": "^0.7.1"
+    "flarum/core": "^1.0.0",
+    "fof/follow-tags": "^1.0.0"
   },
   "authors": [
     {
@@ -29,7 +29,7 @@
   },
   "extra": {
     "flarum-extension": {
-      "title": "IM Follow Users",
+      "title": "Follow Users",
       "category": "feature",
       "icon": {
         "name": "fas fa-user-friends",
