Add is:followeduser gambit, integrate filter into fof/user-directory

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "color": "#fff"
       },
       "optional-dependencies": [
-        "fof/follow-tags"
+        "fof/follow-tags",
+        "fof/user-directory"
       ]
     },
     "flagrow": {
