--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "forum": "https://discuss.flarum.org/d/25701"
   },
   "require": {
+    "php": "^7.4 || ^8.0",
     "flarum/core": "^1.0.0",
     "fof/follow-tags": "^1.0.0"
   },
