--- a/js/package.json
+++ b/js/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "flarum-webpack-config": "^1.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.8.0"
   },
   "scripts": {
     "dev": "webpack --mode development --watch",
@@ -12,8 +13,8 @@
     "lint": "prettier --write src"
   },
   "devDependencies": {
-    "flarum-webpack-config": "^1.0.0",
     "flarum-tsconfig": "^1.0.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "flarum": "github:flarum/types#v1"
   }
 }
