--- a/js/package.json
+++ b/js/package.json
@@ -2,8 +2,11 @@
   "name": "@ianm/follow-users",
   "version": "0.0.0",
   "private": true,
+  "prettier": "@flarum/prettier-config",
   "dependencies": {
     "flarum-webpack-config": "^1.0.0",
+    "@flarum/prettier-config": "^1.0.0",
+    "flarum-tsconfig": "^1.0.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0"
   },
@@ -13,8 +16,6 @@
     "lint": "prettier --write src"
   },
   "devDependencies": {
-    "flarum-tsconfig": "^1.0.0",
-    "prettier": "^2.3.2",
-    "flarum": "github:flarum/types#v1"
+    "prettier": "^2.4.1"
   }
 }
