--- a/js/package.json
+++ b/js/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
-    "lint": "prettier --write src"
+    "format": "prettier --write src",
+    "format-check": "prettier --check src"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
