--- a/js/package.json
+++ b/js/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "prettier": "@flarum/prettier-config",
   "dependencies": {
-    "flarum-webpack-config": "^1.0.0",
+    "flarum-webpack-config": "^2.0.0",
     "@flarum/prettier-config": "^1.0.0",
     "flarum-tsconfig": "^1.0.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.8.0"
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
-    "lint": "prettier --write src"
+    "format": "prettier --write src",
+    "format-check": "prettier --check src"
   },
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "prettier": "^2.6.2"
   }
 }
