--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
@@ -40,10 +40,10 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
@@ -52,7 +52,7 @@ jobs:
       # Our action will install node, npm and yarn, cd into `./js`, run `npm run build` (and
       # `npm run build-typings` if desired), then commit and upload any changes
       - name: Build production JS
-        uses: flarum/action-build@2
+        uses: flarum/action-build@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           build_script: build
@@ -70,10 +70,10 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
@@ -82,7 +82,7 @@ jobs:
       # Our action will install node, npm and yarn, cd into `./js`, run `npm run build` (and
       # `npm run build-typings` if desired). It will NOT commit and upload.
       - name: Build production JS
-        uses: flarum/action-build@2
+        uses: flarum/action-build@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           build_script: build
