--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,87 @@
 {
-  "name": "ianm/follow-users",
-  "description": "Follow users and be notified of new discussions or posts",
-  "keywords": [
-    "flarum", "subscribe", "following", "friends"
-  ],
-  "type": "flarum-extension",
-  "license": "MIT",
-  "support": {
-    "issues": "https://github.com/imorland/follow-users/issues",
-    "source": "https://github.com/imorland/follow-users",
-    "forum": "https://discuss.flarum.org/d/25701"
-  },
-  "require": {
-    "flarum/core": "^1.7.0",
-    "fof/follow-tags": "^1.1.4"
-  },
-  "authors": [
-    {
-      "name": "IanM",
-      "homepage": "https://discuss.flarum.org/u/ianm",
-      "role": "Developer"
-    }
-  ],
-  "autoload": {
-    "psr-4": {
-      "IanM\\FollowUsers\\": "src/"
-    }
-  },
-  "extra": {
-    "flarum-extension": {
-      "title": "Follow Users",
-      "category": "feature",
-      "icon": {
-        "name": "fas fa-user-friends",
-        "backgroundColor": "#0072e3",
-        "color": "#fff"
-      },
-      "optional-dependencies": [
-        "fof/follow-tags",
-        "fof/user-directory"
-      ]
+    "name": "ianm/follow-users",
+    "description": "Follow users and be notified of new discussions or posts",
+    "keywords": [
+        "flarum",
+        "subscribe",
+        "following",
+        "friends"
+    ],
+    "type": "flarum-extension",
+    "license": "MIT",
+    "support": {
+        "issues": "https://github.com/imorland/follow-users/issues",
+        "source": "https://github.com/imorland/follow-users",
+        "forum": "https://discuss.flarum.org/d/25701"
     },
-    "flagrow": {
-      "discuss": "https://discuss.flarum.org/d/25701"
+    "require": {
+        "flarum/core": "^1.7.0",
+        "fof/follow-tags": "^1.1.4"
+    },
+    "authors": [
+        {
+            "name": "IanM",
+            "homepage": "https://discuss.flarum.org/u/ianm",
+            "role": "Developer"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "IanM\\FollowUsers\\": "src/"
+        }
+    },
+    "extra": {
+        "flarum-extension": {
+            "title": "Follow Users",
+            "category": "feature",
+            "icon": {
+                "name": "fas fa-user-friends",
+                "backgroundColor": "#0072e3",
+                "color": "#fff"
+            },
+            "optional-dependencies": [
+                "fof/user-directory",
+                "blomstra/gdpr"
+            ]
+        },
+        "flagrow": {
+            "discuss": "https://discuss.flarum.org/d/25701"
+        },
+        "flarum-cli": {
+            "modules": {
+                "githubActions": true,
+                "backendTesting": true
+            }
+        }
+    },
+    "require-dev": {
+        "flarum/phpstan": "*",
+        "flarum/testing": "*",
+        "flarum/approval": "*",
+        "fof/user-directory": "*",
+        "blomstra/gdpr": "@beta"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "IanM\\FollowUsers\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": [
+            "@test:unit",
+            "@test:integration"
+        ],
+        "test:unit": "phpunit -c tests/phpunit.unit.xml",
+        "test:integration": "phpunit -c tests/phpunit.integration.xml",
+        "test:setup": "@php tests/integration/setup.php",
+        "analyse:phpstan": "phpstan analyse",
+        "clear-cache:phpstan": "phpstan clear-result-cache"
+    },
+    "scripts-descriptions": {
+        "test": "Runs all tests.",
+        "test:unit": "Runs all unit tests.",
+        "test:integration": "Runs all integration tests.",
+        "test:setup": "Sets up a database for use with integration tests. Execute this only once.",
+        "analyse:phpstan": "Run static analysis"
     }
-  }
 }
