enable testing, test forum actor relation

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -6,7 +6,7 @@ jobs:
   run:
     uses: flarum/framework/.github/workflows/REUSABLE_backend.yml@1.x
     with:
-      enable_backend_testing: false
+      enable_backend_testing: true
       enable_phpstan: true
       php_versions: '["8.0", "8.1", "8.2", "8.3"]'
 
